--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,6 +60,7 @@ header {
     padding: 10px 0;
     top: 0;
     position: sticky;
+    z-index: 100;
 
     height: var(--header-height);
 }
